@@ -1,6 +1,13 @@
 webkit2gtk (2.10.3+dfsg1-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * debian/rules:
+    + The size of the webkit2gtk -dbg packages is huge and has been a
+      source of headaches in many architectures that cannot build them or
+      deal with them easily. Our current approach has been to disable them
+      completely for those architectures. For this release we'll build
+      them again but using -g1 instead, which produces _way_ smaller files
+      that are still useful for backtraces.
 
  -- Alberto Garcia <berto@igalia.com>  Mon, 26 Oct 2015 14:41:33 +0200
 
